--- a/film.html
+++ b/film.html
@@ -8,85 +8,33 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
   <style>
-    .film-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 40px;
-      margin-top: 40px;
-      align-items: flex-start;
-    }
-    .film-left {
-      flex: 1;
-      min-width: 300px;
-      max-width: 360px;
-    }
-    .film-left img {
-      width: 95%;
-      max-width: 275px;
-      border-radius: 10px;
-      margin: 0 auto;
-      display: block;
-      box-shadow: 0 0 20px rgba(0, 255, 255, 0.25);
-      border: 1px solid rgba(0, 255, 255, 0.25);
-      transition: transform 0.3s ease;
-    }
+    .film-container { display: flex; flex-wrap: wrap; gap: 40px; margin-top: 40px; align-items: flex-start; }
+    .film-left { flex: 1; min-width: 300px; max-width: 360px; }
+    .film-left img { width: 95%; max-width: 275px; border-radius: 10px; margin: 0 auto; display: block;
+      box-shadow: 0 0 20px rgba(0, 255, 255, 0.25); border: 1px solid rgba(0, 255, 255, 0.25); transition: transform 0.3s ease; }
     .film-left img:hover { transform: scale(1.05); }
-
-    .film-meta {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      margin-top: 12px;
-      background: none;
-      box-shadow: none;
-      border: none;
-    }
-    .film-meta span {
-      display: block;
-      color: #bbb;
-      margin: 4px 0;
-      font-size: 15px;
-      line-height: 1.4;
-    }
+    .film-meta { display: flex; flex-direction: column; gap: 8px; margin-top: 12px; background: none; box-shadow: none; border: none; }
+    .film-meta span { display: block; color: #bbb; margin: 4px 0; font-size: 15px; line-height: 1.4; }
     .film-meta b { color: #00fff2; }
+    .film-right { flex: 2; min-width: 400px; }
+    .film-title { font-size: 28px; color: #00fff2; text-shadow: 0 0 18px #00fff2a0; margin-bottom: 15px; font-weight: 700; }
 
-    .film-right {
-      flex: 2;
-      min-width: 400px;
+    /* Перемикач джерела */
+    .source-switch { display: flex; gap: 10px; margin: 0 0 10px 2px; }
+    .source-switch button {
+      padding: 10px 14px; border-radius: 10px; border: 1px solid rgba(0,255,242,0.35);
+      background: #0f0f0f; color: #e9fefe; cursor: pointer; font-weight: 600;
+      box-shadow: 0 0 18px rgba(0,255,242,0.1);
+      transition: transform .12s ease, box-shadow .12s ease, background .12s ease, color .12s ease;
     }
-    .film-title {
-      font-size: 28px;
-      color: #00fff2;
-      text-shadow: 0 0 18px #00fff2a0;
-      margin-bottom: 15px;
-      font-weight: 700;
-    }
-    .player-box {
-      position: relative;
-      background: #000;
-      border-radius: 12px;
-      border: 1px solid rgba(0,255,242,0.3);
-      overflow: hidden;
-      box-shadow: 0 0 30px rgba(0,255,242,0.15);
-    }
-    video {
-      width: 100%;
-      height: auto;
-      display: block;
-      border-radius: 12px;
-      aspect-ratio: 16/9;
-    }
-    .film-description {
-      margin-top: 25px;
-      background: #1a1a1a;
-      border-radius: 12px;
-      border: 1px solid rgba(0,255,242,0.2);
-      box-shadow: 0 0 30px rgba(0,255,242,0.1);
-      padding: 20px 24px;
-      color: #ddd;
-      font-size: 16px;
-      line-height: 1.7;
-    }
+    .source-switch button:hover { transform: translateY(-1px); box-shadow: 0 0 22px rgba(0,255,242,0.18); }
+    .source-switch button.active { background: #00fff2; color: #002927; }
+    .source-switch button:disabled { opacity: .45; cursor: not-allowed; }
+
+    .player-box { position: relative; background: #000; border-radius: 12px; border: 1px solid rgba(0,255,242,0.3); overflow: hidden; box-shadow: 0 0 30px rgba(0,255,242,0.15); }
+    video { width: 100%; height: auto; display: block; border-radius: 12px; aspect-ratio: 16/9; }
+    .film-description { margin-top: 25px; background: #1a1a1a; border-radius: 12px; border: 1px solid rgba(0,255,242,0.2);
+      box-shadow: 0 0 30px rgba(0,255,242,0.1); padding: 20px 24px; color: #ddd; font-size: 16px; line-height: 1.7; }
     footer { margin-top: 80px; }
   </style>
 </head>
@@ -98,6 +46,7 @@
       <nav class="main-nav">
         <img src="logo.png" alt="Relax Logo" class="nav-logo" />
         <a href="index.html">Головна</a>
+
         <div class="dropdown">
           <a href="#" class="menu-films">Фільми</a>
           <div class="mega-menu">
@@ -113,6 +62,7 @@
             </div>
           </div>
         </div>
+
         <div class="dropdown">
           <a href="#" class="menu-series">Серіали</a>
           <div class="mega-menu mega-series">
@@ -123,6 +73,7 @@
             </div>
           </div>
         </div>
+
         <div class="dropdown">
           <a href="#" class="menu-cartoons">Мультфільми</a>
           <div class="mega-menu mega-cartoons">
@@ -133,6 +84,7 @@
             </div>
           </div>
         </div>
+
         <a href="#">Новинки</a>
         <a href="#">Збірки фільмів</a>
       </nav>
@@ -144,27 +96,25 @@
   </header>
 
   <!-- === BANNER === -->
-<div class="container">
-  <section class="banner-slider">
-    <h2>🔥 Топ 10 фільмів</h2>
-    <button class="slider-btn left" onclick="scrollSlider(-1)">❮</button>
-    <button class="slider-btn right" onclick="scrollSlider(1)">❯</button>
-    <div class="slider-row" id="sliderRow">
-      <div class="slide"><img src="https://i.postimg.cc/VLHxgJsg/dragon.jpg"><p>Дракон Раджа</p></div>
-      <div class="slide"><img src="https://i.postimg.cc/V6z1QntN/anemone.jpg"><p>Анемона</p></div>
-      <div class="slide"><img src="https://i.postimg.cc/mkzLz6nK/enigma.jpg"><p>Енігма</p></div>
-      <div class="slide"><img src="https://i.postimg.cc/VvY5YBgJ/afterburn.jpg"><p>Afterburn</p></div>
-      <div class="slide"><img src="https://i.postimg.cc/FFqXK6rL/epsilon.jpg"><p>Епсілон</p></div>
-      <div class="slide"><img src="https://i.postimg.cc/L6PQ1RzM/volcano.jpg"><p>Смерчі 2024</p></div>
-      <div class="slide"><img src="https://i.postimg.cc/qM0MYKnD/patriot.jpg"><p>Патріот</p></div>
-      <div class="slide"><img src="https://i.postimg.cc/d3zvTX6X/hero.jpg"><p>Ідеальний злочин</p></div>
-      <div class="slide"><img src="https://i.postimg.cc/LX3n8M46/chains.jpg"><p>Увімкни мене</p></div>
-      <div class="slide"><img src="https://i.postimg.cc/Y0Lt8Tmn/freeze.jpg"><p>Точка замерзання</p></div>
-    </div>
-  </section>
-</div>
-
-
+  <div class="container">
+    <section class="banner-slider">
+      <h2>🔥 Топ 10 фільмів</h2>
+      <button class="slider-btn left" onclick="scrollSlider(-1)">❮</button>
+      <button class="slider-btn right" onclick="scrollSlider(1)">❯</button>
+      <div class="slider-row" id="sliderRow">
+        <div class="slide"><img src="https://i.postimg.cc/VLHxgJsg/dragon.jpg"><p>Дракон Раджа</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/V6z1QntN/anemone.jpg"><p>Анемона</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/mkzLz6nK/enigma.jpg"><p>Енігма</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/VvY5YBgJ/afterburn.jpg"><p>Afterburn</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/FFqXK6rL/epsilon.jpg"><p>Епсілон</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/L6PQ1RzM/volcano.jpg"><p>Смерчі 2024</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/qM0MYKnD/patriot.jpg"><p>Патріот</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/d3zvTX6X/hero.jpg"><p>Ідеальний злочин</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/LX3n8M46/chains.jpg"><p>Увімкни мене</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/Y0Lt8Tmn/freeze.jpg"><p>Точка замерзання</p></div>
+      </div>
+    </section>
+  </div>
 
   <!-- === MAIN === -->
   <main>
@@ -186,9 +136,18 @@
 
       <div class="film-right">
         <div class="film-title" id="filmTitle">Назва фільму</div>
+
+        <!-- Перемикач Фільм / Трейлер -->
+        <div class="source-switch">
+          <button id="btnMovie" class="active">🎬 Фільм</button>
+          <button id="btnTrailer">🎞️ Трейлер</button>
+        </div>
+
         <div class="player-box">
+          <!-- autoplay видалено (нема автозапуску) -->
           <video id="filmPlayer" controls playsinline muted crossorigin="anonymous"></video>
         </div>
+
         <div class="film-description">
           <h3>Про що фільм:</h3>
           <p id="filmDesc">Опис фільму...</p>
@@ -198,100 +157,145 @@
   </main>
 
   <footer>© 2025 KinoSite • Усі права захищені</footer>
-<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script>
-  const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
-  const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
-  const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-  async function loadFilm() {
-    const params = new URLSearchParams(window.location.search);
-    const id = params.get("id");
-    if (!id) return;
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script>
+    const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
+    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
+    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-    const { data, error } = await supabase
-      .from("films_site")
-      .select("*")
-      .eq("id", id)
-      .single();
+    let hls = null;                   // поточний Hls-інстанс (щоб коректно руйнувати)
+    let currentSource = "movie";      // 'movie' або 'trailer'
+    let movieUrl = "";                // головний потік
+    let trailerUrl = "";              // трейлер
 
-    if (error || !data) {
-      console.error("❌ Помилка Supabase:", error?.message);
-      document.getElementById("filmTitle").textContent = "Фільм не знайдено";
-      return;
+    // Утиліта: знищення Hls при перемиканні
+    function destroyHls() {
+      if (hls) {
+        try { hls.destroy(); } catch(e) {}
+        hls = null;
+      }
     }
 
-    // 🟢 Заповнення даних
-    document.getElementById("filmPoster").src = data.poster || "";
-    document.getElementById("filmTitle").textContent = data.title || "";
-    document.getElementById("filmDesc").textContent = data.description || "Опис відсутній";
-    document.getElementById("filmYear").textContent = data.year || "";
-    document.getElementById("filmGenre").textContent = data.genre || "";
-    document.getElementById("filmCountry").textContent = data.country || "";
-    document.getElementById("filmDirector").textContent = data.director || "";
-    document.getElementById("filmCast").textContent = data.cast || "";
-    document.getElementById("filmSound").textContent = data.sound || "";
-    document.getElementById("filmDuration").textContent = data.duration || "";
-    document.getElementById("filmAge").textContent = data.age || "";
-    document.getElementById("filmImdb").textContent = data.imdb || "—";
+    // Універсальне підключення джерела до <video>
+    function setupPlayer(url) {
+      const player = document.getElementById("filmPlayer");
+      destroyHls();                   // вимикаємо попередній інстанс
 
-    // 🎬 Плеєр (універсально для .m3u8 і .mp4)
-const player = document.getElementById("filmPlayer");
-const url = data.stream_url || "";
+      // Обнуляємо src і паузимо
+      try { player.pause(); } catch(e) {}
+      player.removeAttribute("src");
+      player.load();
 
-// Якщо це .m3u8 і браузер підтримує hls.js → використовуємо hls.js
-if (url && url.endsWith(".m3u8")) {
-  if (window.Hls && Hls.isSupported()) {
-    const hls = new Hls({
-      maxBufferLength: 30,
-      enableWorker: true,
-      lowLatencyMode: true,
-    });
-    hls.loadSource(url);
-    hls.attachMedia(player);
-    hls.on(Hls.Events.MANIFEST_PARSED, async () => {
-      try {
-        await player.play();
-      } catch {
-        document.body.addEventListener("click", () => player.play(), { once: true });
+      if (!url) {
+        console.warn("Порожній URL для відтворення");
+        return;
       }
-    });
-  } else if (player.canPlayType("application/vnd.apple.mpegurl")) {
-    // Safari / iOS — нативно
-    player.src = url;
-    player.addEventListener("loadedmetadata", async () => {
-      try {
-        await player.play();
-      } catch {
-        document.body.addEventListener("click", () => player.play(), { once: true });
+
+      if (url.endsWith(".m3u8")) {
+        if (window.Hls && Hls.isSupported()) {
+          hls = new Hls({
+            maxBufferLength: 30,
+            enableWorker: true,
+            lowLatencyMode: true,
+            xhrSetup: function (xhr, url) {
+              xhr.withCredentials = false;
+              xhr.setRequestHeader("Origin", "https://relax-time2.onrender.com");
+              xhr.setRequestHeader("Referer", "https://relax-time2.onrender.com");
+            }
+          });
+          hls.loadSource(url);
+          hls.attachMedia(player);
+        } else if (player.canPlayType("application/vnd.apple.mpegurl")) {
+          player.src = url; // Safari / iOS
+        } else {
+          console.error("Цей браузер не підтримує HLS без hls.js");
+        }
+      } else {
+        // MP4 та інші контейнери
+        player.src = url;
       }
-    });
-  } else {
-    console.error("Цей браузер не підтримує HLS без hls.js");
-  }
-} else if (url) {
-  // MP4 та інші формати
-  player.src = url;
-  try {
-    await player.play();
-  } catch {
-    document.body.addEventListener("click", () => player.play(), { once: true });
-  }
-} else {
-  console.warn("stream_url порожній");
-}
-}
 
-  loadFilm();
+      // Автовідтворення вимкнено — користувач сам натисне Play
+    }
 
-  function scrollSlider(direction) {
-    const slider = document.getElementById("sliderRow");
-    const scrollAmount = 300;
-    slider.scrollBy({ left: scrollAmount * direction, behavior: "smooth" });
-  }
-</script>
+    async function loadFilm() {
+      const params = new URLSearchParams(window.location.search);
+      const id = params.get("id");
+      if (!id) return;
 
+      const { data, error } = await supabase
+        .from("films_site")
+        .select("*")
+        .eq("id", id)
+        .single();
 
+      if (error || !data) {
+        console.error("❌ Помилка Supabase:", error?.message);
+        document.getElementById("filmTitle").textContent = "Фільм не знайдено";
+        return;
+      }
+
+      // 🟢 Заповнення даних
+      document.getElementById("filmPoster").src = data.poster || "";
+      document.getElementById("filmTitle").textContent = data.title || "";
+      document.getElementById("filmDesc").textContent = data.description || "Опис відсутній";
+      document.getElementById("filmYear").textContent = data.year || "";
+      document.getElementById("filmGenre").textContent = data.genre || "";
+      document.getElementById("filmCountry").textContent = data.country || "";
+      document.getElementById("filmDirector").textContent = data.director || "";
+      document.getElementById("filmCast").textContent = data.cast || "";
+      document.getElementById("filmSound").textContent = data.sound || "";
+      document.getElementById("filmDuration").textContent = data.duration || "";
+      document.getElementById("filmAge").textContent = data.age || "";
+      document.getElementById("filmImdb").textContent = data.imdb || "—";
+
+      // Джерела
+      movieUrl   = data.stream_url   || "";
+      trailerUrl = data.trailer_url  || "";
+
+      // Стан кнопок
+      const btnMovie   = document.getElementById("btnMovie");
+      const btnTrailer = document.getElementById("btnTrailer");
+
+      btnMovie.classList.add("active");
+      btnTrailer.classList.remove("active");
+
+      // Якщо трейлера немає — вимикаємо кнопку
+      btnTrailer.disabled = !trailerUrl;
+
+      // Підключаємо початкове джерело (фільм)
+      currentSource = "movie";
+      setupPlayer(movieUrl);
+
+      // Обробники кліків
+      btnMovie.addEventListener("click", () => {
+        if (currentSource === "movie") return;
+        currentSource = "movie";
+        btnMovie.classList.add("active");
+        btnTrailer.classList.remove("active");
+        setupPlayer(movieUrl);
+      });
+
+      btnTrailer.addEventListener("click", () => {
+        if (!trailerUrl) return;
+        if (currentSource === "trailer") return;
+        currentSource = "trailer";
+        btnTrailer.classList.add("active");
+        btnMovie.classList.remove("active");
+        setupPlayer(trailerUrl);
+      });
+    }
+
+    function scrollSlider(direction) {
+      const slider = document.getElementById("sliderRow");
+      const scrollAmount = 300;
+      slider.scrollBy({ left: scrollAmount * direction, behavior: "smooth" });
+    }
+
+    // Завантаження сторінки
+    loadFilm();
+  </script>
 </body>
 </html>
