--- a/film.html
+++ b/film.html
@@ -262,6 +262,53 @@ function getYouTubeId(url) {
       }
 
       // Автовідтворення вимкнено — користувач сам натисне Play
+        // 🎬 Додаємо велику кнопку Play поверх відео
+  const wrapper = player.parentElement;
+
+  // Якщо кнопки ще нема — створюємо
+  if (!wrapper.querySelector("#bigPlayBtn")) {
+    const bigPlay = document.createElement("div");
+    bigPlay.id = "bigPlayBtn";
+    bigPlay.innerHTML = `
+      <div style="
+        position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
+        background:rgba(0,0,0,0.45);cursor:pointer;border-radius:12px;
+        transition:opacity 0.3s ease;">
+        <div style="
+          width:100px;height:100px;border-radius:50%;background:rgba(0,0,0,0.6);
+          display:flex;align-items:center;justify-content:center;
+          box-shadow:0 0 25px rgba(0,255,255,0.5);">
+          <svg width="58" height="58" viewBox="0 0 24 24" fill="#00fff2">
+            <path d="M8 5v14l11-7z"/>
+          </svg>
+        </div>
+      </div>
+    `;
+    wrapper.appendChild(bigPlay);
+
+    // Події
+    const overlay = bigPlay.firstElementChild;
+    overlay.addEventListener("click", async () => {
+      try {
+        await player.play();
+        overlay.style.opacity = "0";
+        overlay.style.pointerEvents = "none";
+      } catch (err) {
+        console.warn("Не вдалося запустити відео:", err);
+      }
+    });
+
+    player.addEventListener("play", () => {
+      overlay.style.opacity = "0";
+      overlay.style.pointerEvents = "none";
+    });
+
+    player.addEventListener("pause", () => {
+      overlay.style.opacity = "1";
+      overlay.style.pointerEvents = "auto";
+    });
+  }
+
     }
 
    async function loadFilm() {
@@ -378,35 +425,7 @@ function getYouTubeId(url) {
       setupPlayer(trailerUrl);
     }
   });
-    // 🔹 Додаємо кнопку Play після створення плеєра
-  const bigPlay = document.getElementById("bigPlayBtn");
-  if (bigPlay) {
-    bigPlay.style.opacity = "1";
-    bigPlay.style.pointerEvents = "auto";
-
-    bigPlay.onclick = async () => {
-      try {
-        await player.play();
-        bigPlay.style.opacity = "0";
-        bigPlay.style.pointerEvents = "none";
-      } catch (err) {
-        console.warn("Не вдалося запустити відео:", err);
-      }
-    };
-
-    // Якщо відео почало грати — ховаємо кнопку
-    player.addEventListener("play", () => {
-      bigPlay.style.opacity = "0";
-      bigPlay.style.pointerEvents = "none";
-    });
-
-    // Якщо відео на паузі — показуємо кнопку знову
-    player.addEventListener("pause", () => {
-      bigPlay.style.opacity = "1";
-      bigPlay.style.pointerEvents = "auto";
-    });
-  }
-
+  
 }
 
 
