--- a/film.html
+++ b/film.html
@@ -11,13 +11,66 @@
 
   <style>
     .film-container { display: flex; flex-wrap: wrap; gap: 40px; margin-top: 40px; align-items: flex-start; }
-    .film-left { flex: 1; min-width: 300px; max-width: 360px; }
+    .film-left {
+      flex: 1;
+      min-width: 320px;
+      max-width: 400px;
+      width: 100%;
+      background: #0b0b0b; /* легкий чорний фон */
+      border-radius: 14px;
+      padding: 20px 18px;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
+      border: 1px solid rgba(255, 255, 255, 0.06);
+      text-align: center;
+    }
     .film-left img { width: 95%; max-width: 275px; border-radius: 10px; margin: 0 auto; display: block;
       box-shadow: 0 0 20px rgba(0, 255, 255, 0.25); border: 1px solid rgba(0, 255, 255, 0.25); transition: transform 0.3s ease; }
     .film-left img:hover { transform: scale(1.05); }
-    .film-meta { display: flex; flex-direction: column; gap: 8px; margin-top: 12px; background: none; box-shadow: none; border: none; }
-    .film-meta span { display: block; color: #bbb; margin: 4px 0; font-size: 15px; line-height: 1.4; }
-    .film-meta b { color: #00fff2; }
+    /* --- новий сучасний чорний блок --- */
+.film-meta {
+  background: #0d0d0d;
+  border-radius: 14px;
+  padding: 16px 18px;
+  margin-top: 18px;
+  border: 1px solid rgba(255,255,255,0.06);
+  box-shadow: 0 0 20px rgba(0,0,0,0.4);
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.film-meta span {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #131313;
+  padding: 10px 12px;
+  border-radius: 8px;
+  color: #cfcfcf;
+  font-size: 15px;
+  font-weight: 500;
+  transition: background .2s ease;
+}
+
+/* Ліва частина — лейбл */
+.film-meta span b {
+  color: #888;
+  font-weight: 600;
+}
+
+/* Права частина — значення */
+.film-meta span span {
+  color: #eaeaea;
+  font-weight: 600;
+}
+
+/* Без жодного ефекту наведення або кліку */
+.film-meta span:hover,
+.film-meta span:active {
+  background: #131313;
+  color: #eaeaea;
+}
+
     .film-right { flex: 2; min-width: 400px; }
     .film-title { font-size: 28px; color: #00fff2; text-shadow: 0 0 18px #00fff2a0; margin-bottom: 15px; font-weight: 700; }
 
