--- a/film.html
+++ b/film.html
@@ -113,6 +113,19 @@
   margin: 0 0 14px 0;
 }
 .film-left { text-align: center; } /* щоб назва і постер були по центру лівої колонки */
+.imdb-badge {
+  display: inline-block;
+  background: #f5c518;
+  color: #000;
+  font-weight: 700;
+  font-size: 11px;
+  border-radius: 3px;
+  padding: 1px 4px;
+  margin-right: 6px;
+  font-family: Arial, sans-serif;
+  letter-spacing: 0.5px;
+  vertical-align: middle;
+}
 
     
   </style>
@@ -210,7 +223,10 @@
           <span><b>Звук:</b> <span id="filmSound"></span></span>
           <span><b>Тривалість:</b> <span id="filmDuration"></span></span>
           <span><b>Вік:</b> <span id="filmAge"></span></span>
-          <span><b>IMDb:</b> <span id="filmImdb"></span></span>
+          <span>
+            <span class="imdb-badge">IMDb</span>
+            <span id="filmImdb"></span>
+          </span>
         </div>
       </div>
 
